refactor(solon-webrx): mcp-client