@@ -3,6 +3,7 @@
  */
 package io.modelcontextprotocol.client.transport;
 
+import io.modelcontextprotocol.client.McpAsyncClient;
 import io.modelcontextprotocol.json.McpJsonMapper;
 import io.modelcontextprotocol.json.TypeRef;
 import io.modelcontextprotocol.spec.*;
@@ -26,10 +27,7 @@ import reactor.util.function.Tuple2;
 import reactor.util.function.Tuples;
 
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
 import java.util.function.Function;
@@ -65,8 +63,6 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
 
     private static final Logger logger = LoggerFactory.getLogger(WebRxStreamableHttpTransport.class);
 
-    private static final String MCP_PROTOCOL_VERSION = ProtocolVersions.MCP_2025_06_18;
-
     private static final String DEFAULT_ENDPOINT = "/mcp";
 
     /**
@@ -85,31 +81,43 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
 
     private final boolean resumableStreams;
 
-    private final AtomicReference<DefaultMcpTransportSession> activeSession = new AtomicReference<>();
+    private final AtomicReference<McpTransportSession<Disposable>> activeSession = new AtomicReference<>();
 
     private final AtomicReference<Function<Mono<McpSchema.JSONRPCMessage>, Mono<McpSchema.JSONRPCMessage>>> handler = new AtomicReference<>();
 
     private final AtomicReference<Consumer<Throwable>> exceptionHandler = new AtomicReference<>();
 
-    private WebRxStreamableHttpTransport(McpJsonMapper jsonMapper, HttpUtilsBuilder webClientBuilder,
-                                         String endpoint, boolean resumableStreams, boolean openConnectionOnStartup) {
+    private final List<String> supportedProtocolVersions;
+
+    private final String latestSupportedProtocolVersion;
+
+    private WebRxStreamableHttpTransport(McpJsonMapper jsonMapper,
+                                         HttpUtilsBuilder webClientBuilder,
+                                         String endpoint,
+                                         boolean resumableStreams,
+                                         boolean openConnectionOnStartup,
+                                         List<String> supportedProtocolVersions) {
         this.jsonMapper = jsonMapper;
         this.webClientBuilder = webClientBuilder;
         this.endpoint = endpoint;
         this.resumableStreams = resumableStreams;
         this.openConnectionOnStartup = openConnectionOnStartup;
         this.activeSession.set(createTransportSession());
+        this.supportedProtocolVersions = List.copyOf(supportedProtocolVersions);
+        this.latestSupportedProtocolVersion = this.supportedProtocolVersions.stream()
+                .sorted(Comparator.reverseOrder())
+                .findFirst()
+                .get();
     }
 
     @Override
     public List<String> protocolVersions() {
-        return Arrays.asList(ProtocolVersions.MCP_2024_11_05, ProtocolVersions.MCP_2025_03_26);
+        return supportedProtocolVersions;
     }
 
     /**
      * Create a stateful builder for creating {@link WebRxStreamableHttpTransport}
      * instances.
-     *
      * @param webClientBuilder the {@link HttpUtilsBuilder} to use
      * @return a builder which will create an instance of
      * {@link WebRxStreamableHttpTransport} once {@link Builder#build()} is called
@@ -136,11 +144,8 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
                 return Mono.empty();
             } else {
                 return Mono.fromFuture(webClientBuilder.build(this.endpoint)
-                                .header(HttpHeaders.PROTOCOL_VERSION, MCP_PROTOCOL_VERSION)
-                                .fill(http -> {
-                                    http.header(HttpHeaders.MCP_SESSION_ID, sessionId);
-                                    http.header(HttpHeaders.PROTOCOL_VERSION, MCP_PROTOCOL_VERSION);
-                                })
+                                .header(HttpHeaders.MCP_SESSION_ID, sessionId)
+                                .header(HttpHeaders.PROTOCOL_VERSION, this.latestSupportedProtocolVersion)
                                 .execAsync("DELETE"))
                         .onErrorComplete(e -> {
                             logger.warn("Got error when closing transport", e);
@@ -151,6 +156,14 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
         };
 
         return new DefaultMcpTransportSession(onClose);
+    }
+
+    private McpTransportSession<Disposable> createClosedSession(McpTransportSession<Disposable> existingSession) {
+        var existingSessionId = Optional.ofNullable(existingSession)
+                .filter(session -> !(session instanceof ClosedMcpTransportSession<Disposable>))
+                .flatMap(McpTransportSession::sessionId)
+                .orElse(null);
+        return new ClosedMcpTransportSession<>(existingSessionId);
     }
 
     @Override
@@ -176,9 +189,9 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
     public Mono<Void> closeGracefully() {
         return Mono.defer(() -> {
             logger.debug("Graceful close triggered");
-            DefaultMcpTransportSession currentSession = this.activeSession.getAndSet(createTransportSession());
+            McpTransportSession<Disposable> currentSession = this.activeSession.getAndUpdate(this::createClosedSession);
             if (currentSession != null) {
-                return currentSession.closeGracefully();
+                return Mono.from(currentSession.closeGracefully());
             }
             return Mono.empty();
         });
@@ -188,7 +201,8 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
         return Mono.deferContextual(ctx -> {
             if (stream != null) {
                 logger.debug("Reconnecting stream {} with lastId {}", stream.streamId(), stream.lastId());
-            } else {
+            }
+            else {
                 logger.debug("Reconnecting with no prior stream");
             }
             // Here we attempt to initialize the client. In case the server supports SSE,
@@ -201,7 +215,9 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
 
             Disposable connection = Mono.fromFuture(webClientBuilder.build(this.endpoint)
                             .accept(MimeType.TEXT_EVENT_STREAM_VALUE)
-                            .header(HttpHeaders.PROTOCOL_VERSION, MCP_PROTOCOL_VERSION)
+                            .header(HttpHeaders.PROTOCOL_VERSION,
+                                    ctx.getOrDefault(McpAsyncClient.NEGOTIATED_PROTOCOL_VERSION,
+                                            this.latestSupportedProtocolVersion))
                             .fill(http -> {
                                 transportSession.sessionId().ifPresent(id -> http.header(HttpHeaders.MCP_SESSION_ID, id));
                                 if (stream != null) {
@@ -213,14 +229,21 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
                         if (isEventStream(response)) {
                             logger.debug("Established SSE stream via GET");
                             return eventStream(stream, response);
-                        } else if (isNotAllowed(response)) {
+                        }
+                        else if (isNotAllowed(response)) {
                             logger.debug("The server does not support SSE streams, using request-response mode.");
                             return Flux.empty();
-                        } else if (isNotFound(response)) {
-                            String sessionIdRepresentation = sessionIdOrPlaceholder(transportSession);
-                            return mcpSessionNotFoundError(sessionIdRepresentation);
-                        } else {
-                            //todo: createError
+                        }
+                        else if (isNotFound(response)) {
+                            if (transportSession.sessionId().isPresent()) {
+                                String sessionIdRepresentation = sessionIdOrPlaceholder(transportSession);
+                                return mcpSessionNotFoundError(sessionIdRepresentation);
+                            }
+                            else {
+                                return this.extractError(response, MISSING_SESSION_ID);
+                            }
+                        }
+                        else {
                             return Flux.<McpSchema.JSONRPCMessage>error(response.createError()).doOnError(e -> {
                                 logger.info("Opening an SSE stream failed. This can be safely ignored.", e);
                             });
@@ -258,22 +281,27 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
             final AtomicReference<Disposable> disposableRef = new AtomicReference<>();
             final McpTransportSession<Disposable> transportSession = this.activeSession.get();
 
-            String messageJsonStr = null;
+            String messageJsonStr0 = null;
 
             try {
-                messageJsonStr = jsonMapper.writeValueAsString(message);
+                messageJsonStr0 = jsonMapper.writeValueAsString(message);
             } catch (Exception e) {
                 sink.error(e);
                 return;
             }
 
-            Disposable connection = Mono.fromFuture(webClientBuilder.build(this.endpoint)
+            String messageJsonStr = messageJsonStr0;
+
+            Disposable connection = Mono.deferContextual(ctx -> Mono.fromFuture(webClientBuilder.build(this.endpoint)
                             .accept(MimeType.APPLICATION_JSON_VALUE + ", " + MimeType.TEXT_EVENT_STREAM_VALUE)
-                            .header(HttpHeaders.PROTOCOL_VERSION, MCP_PROTOCOL_VERSION)
+                            .header(HttpHeaders.PROTOCOL_VERSION,
+                                    ctx.getOrDefault(McpAsyncClient.NEGOTIATED_PROTOCOL_VERSION,
+                                            this.latestSupportedProtocolVersion))
                             .fill(http -> {
                                 transportSession.sessionId().ifPresent(id -> http.header(HttpHeaders.MCP_SESSION_ID, id));
                             })
-                            .bodyOfJson(messageJsonStr).execAsync("POST")).flatMapMany(response -> {
+                            .bodyOfJson(messageJsonStr).execAsync("POST")))
+                    .flatMapMany(response -> {
                         if (transportSession
                                 .markInitialized(response.header(HttpHeaders.MCP_SESSION_ID))) {
                             // Once we have a session, we try to open an async stream for
@@ -289,7 +317,7 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
                             String contentType = response.contentType();
                             // Existing SDKs consume notifications with no response body nor
                             // content type
-                            if (contentType == null || contentType.length() == 0) {
+                            if (contentType == null || contentType.isEmpty() || contentType.length() == 0) {
                                 logger.trace("Message was successfully sent via POST for session {}",
                                         sessionRepresentation);
                                 // signal the caller that the message was successfully
@@ -316,10 +344,10 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
                                 }
                             }
                         } else {
-                            if (isNotFound(response)) {
+                            if (isNotFound(response) && !sessionRepresentation.equals(MISSING_SESSION_ID)) {
                                 return mcpSessionNotFoundError(sessionRepresentation);
                             }
-                            return extractError(response, sessionRepresentation);
+                            return this.extractError(response, sessionRepresentation);
                         }
                     })
                     .flatMap(jsonRpcMessage -> this.handler.get().apply(Mono.just(jsonRpcMessage)))
@@ -350,38 +378,37 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
     }
 
     private Flux<McpSchema.JSONRPCMessage> extractError(HttpResponse response, String sessionRepresentation) {
-        //todo: createError
         return Flux.<McpSchema.JSONRPCMessage>defer(() -> {
             try {
                 HttpResponseException e = response.createError();
                 byte[] body = e.bodyBytes();
 
+                McpSchema.JSONRPCResponse.JSONRPCError jsonRpcError = null;
                 Exception toPropagate;
 
-                if (body == null || body.length == 0) {
-                    toPropagate = new RuntimeException("Sending request failed(" + e.getMessage() + ")", e);
-                } else {
-                    try {
-                        McpSchema.JSONRPCResponse.JSONRPCError jsonRpcError = null;
-                        McpSchema.JSONRPCResponse jsonRpcResponse = jsonMapper.readValue(body,
-                                McpSchema.JSONRPCResponse.class);
-                        jsonRpcError = jsonRpcResponse.error();
-                        toPropagate = jsonRpcError != null ? new McpError(jsonRpcError)
-                                : new McpError("Can't parse the jsonResponse " + jsonRpcResponse);
-                    } catch (IOException ex) {
-                        toPropagate = new RuntimeException("Sending request failed", e);
-                        logger.debug("Received content together with {} HTTP code response: {}", e.code(), body);
-                    }
+                try {
+                    McpSchema.JSONRPCResponse jsonRpcResponse = jsonMapper.readValue(body, McpSchema.JSONRPCResponse.class);
+                    jsonRpcError = jsonRpcResponse.error();
+                    toPropagate = jsonRpcError != null ? new McpError(jsonRpcError)
+                            : new McpTransportException("Can't parse the jsonResponse " + jsonRpcResponse);
+                }
+                catch (IOException ex) {
+                    toPropagate = new McpTransportException("Sending request failed, " + e.getMessage(), e);
+                    logger.debug("Received content together with {} HTTP code response: {}", response.code(), body);
                 }
 
                 // Some implementations can return 400 when presented with a
                 // session id that it doesn't know about, so we will
                 // invalidate the session
                 // https://github.com/modelcontextprotocol/typescript-sdk/issues/389
-                if (e.code() == StatusCodes.CODE_BAD_REQUEST) {
-                    return Flux.error(new McpTransportSessionNotFoundException(sessionRepresentation, toPropagate));
+                if (response.code() == StatusCodes.CODE_BAD_REQUEST) {
+                    if (!sessionRepresentation.equals(MISSING_SESSION_ID)) {
+                        return Mono.error(new McpTransportSessionNotFoundException(sessionRepresentation, toPropagate));
+                    }
+                    return Mono.error(new McpTransportException("Received 400 BAD REQUEST for session "
+                            + sessionRepresentation + ". " + toPropagate.getMessage(), toPropagate));
                 }
-                return Flux.error(toPropagate);
+                return Mono.error(toPropagate);
             } catch (Exception ex) {
                 return Flux.error(ex);
             }
@@ -406,7 +433,7 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
     }
 
     private static boolean isEventStream(HttpResponse response) {
-        if (response.code() >= StatusCodes.CODE_OK && response.code() <= StatusCodes.CODE_MULTIPLE_CHOICES) {
+        if (response.code() >= StatusCodes.CODE_OK) {
             String ct = response.contentType();
             if (ct != null && ct.startsWith(MimeType.TEXT_EVENT_STREAM_VALUE)) {
                 return true;
@@ -417,7 +444,7 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
     }
 
     private static String sessionIdOrPlaceholder(McpTransportSession<?> transportSession) {
-        return transportSession.sessionId().orElse("[missing_session_id]");
+        return transportSession.sessionId().orElse(MISSING_SESSION_ID);
     }
 
     private Flux<McpSchema.JSONRPCMessage> directResponseFlux(McpSchema.JSONRPCMessage sentMessage, HttpResponse response) {
@@ -425,8 +452,9 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
                     try {
                         String responseMessage = response.bodyAsString();
 
-                        if (sentMessage instanceof McpSchema.JSONRPCNotification && Utils.hasText(responseMessage)) {
-                            logger.warn("Notification: {} received non-compliant response: {}", sentMessage, responseMessage);
+                        if (sentMessage instanceof McpSchema.JSONRPCNotification) {
+                            logger.warn("Notification: {} received non-compliant response: {}", sentMessage,
+                                    Utils.hasText(responseMessage) ? responseMessage : "[empty]");
                             s.complete();
                         } else {
                             McpSchema.JSONRPCMessage jsonRpcResponse = McpSchema.deserializeJsonRpcMessage(jsonMapper,
@@ -434,8 +462,7 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
                             s.next(jsonRpcResponse);
                         }
                     } catch (IOException e) {
-                        // TODO: this should be a McpTransportError
-                        s.error(e);
+                        s.error(new McpTransportException(e));
                     }
                 }
         );
@@ -460,9 +487,9 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
                 // We don't support batching ATM and probably won't since the next version
                 // considers removing it.
                 McpSchema.JSONRPCMessage message = McpSchema.deserializeJsonRpcMessage(this.jsonMapper, event.data());
-                return Tuples.of(Optional.ofNullable(event.id()), Arrays.asList(message));
+                return Tuples.of(Optional.ofNullable(event.id()), List.of(message));
             } catch (IOException ioException) {
-                throw new McpError("Error parsing JSON-RPC message: " + event.data());
+                throw new McpTransportException("Error parsing JSON-RPC message: " + event.data(), ioException);
             }
         } else {
             logger.debug("Received SSE event with type: {}", event);
@@ -485,14 +512,16 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
 
         private boolean openConnectionOnStartup = false;
 
+        private List<String> supportedProtocolVersions = List.of(ProtocolVersions.MCP_2024_11_05,
+                ProtocolVersions.MCP_2025_03_26, ProtocolVersions.MCP_2025_06_18);
+
         private Builder(HttpUtilsBuilder webClientBuilder) {
-            Assert.notNull(webClientBuilder, "HttpUtilsBuilder must not be null");
+            Assert.notNull(webClientBuilder, "webClientBuilder must not be null");
             this.webClientBuilder = webClientBuilder;
         }
 
         /**
          * Configure the {@link McpJsonMapper} to use.
-         *
          * @param jsonMapper instance to use
          * @return the builder instance
          */
@@ -504,7 +533,6 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
 
         /**
          * Configure the {@link HttpUtilsBuilder} to construct the {@link HttpUtils}.
-         *
          * @param webClientBuilder instance to use
          * @return the builder instance
          */
@@ -516,7 +544,6 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
 
         /**
          * Configure the endpoint to make HTTP requests against.
-         *
          * @param endpoint endpoint to use
          * @return the builder instance
          */
@@ -529,10 +556,9 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
         /**
          * Configure whether to use the stream resumability feature by keeping track of
          * SSE event ids.
-         *
          * @param resumableStreams if {@code true} event ids will be tracked and upon
-         *                         disconnection, the last seen id will be used upon reconnection as a header to
-         *                         resume consuming messages.
+         * disconnection, the last seen id will be used upon reconnection as a header to
+         * resume consuming messages.
          * @return the builder instance
          */
         public Builder resumableStreams(boolean resumableStreams) {
@@ -544,10 +570,9 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
          * Configure whether the client should open an SSE connection upon startup. Not
          * all servers support this (although it is in theory possible with the current
          * specification), so use with caution. By default, this value is {@code false}.
-         *
          * @param openConnectionOnStartup if {@code true} the {@link #connect(Function)}
-         *                                method call will try to open an SSE connection before sending any JSON-RPC
-         *                                request
+         * method call will try to open an SSE connection before sending any JSON-RPC
+         * request
          * @return the builder instance
          */
         public Builder openConnectionOnStartup(boolean openConnectionOnStartup) {
@@ -556,19 +581,44 @@ public class WebRxStreamableHttpTransport implements McpClientTransport {
         }
 
         /**
+         * Sets the list of supported protocol versions used in version negotiation. By
+         * default, the client will send the latest of those versions in the
+         * {@code MCP-Protocol-Version} header.
+         * <p>
+         * Setting this value only updates the values used in version negotiation, and
+         * does NOT impact the actual capabilities of the transport. It should only be
+         * used for compatibility with servers having strict requirements around the
+         * {@code MCP-Protocol-Version} header.
+         * @param supportedProtocolVersions protocol versions supported by this transport
+         * @return this builder
+         * @see <a href=
+         * "https://modelcontextprotocol.io/specification/2024-11-05/basic/lifecycle#version-negotiation">version
+         * negotiation specification</a>
+         * @see <a href=
+         * "https://modelcontextprotocol.io/specification/2025-06-18/basic/transports#protocol-version-header">Protocol
+         * Version Header</a>
+         */
+        public Builder supportedProtocolVersions(List<String> supportedProtocolVersions) {
+            Assert.notEmpty(supportedProtocolVersions, "supportedProtocolVersions must not be empty");
+            this.supportedProtocolVersions = Collections.unmodifiableList(supportedProtocolVersions);
+            return this;
+        }
+
+
+        /**
          * Construct a fresh instance of {@link WebRxStreamableHttpTransport} using
          * the current builder configuration.
          *
          * @return a new instance of {@link WebRxStreamableHttpTransport}
          */
         public WebRxStreamableHttpTransport build() {
-
             return new WebRxStreamableHttpTransport(
                     jsonMapper == null ? McpJsonMapper.getDefault() : jsonMapper,
-                    this.webClientBuilder,
+                    webClientBuilder,
                     endpoint,
                     resumableStreams,
-                    openConnectionOnStartup);
+                    openConnectionOnStartup,
+                    supportedProtocolVersions);
         }
     }
 }
